--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,11 @@
     <h1>Google Sign-In</h1>
     <hr />
 
-    <div id="g_id_onload" data-client_id="617010184329-rc9pvqvd4srq7gqviianr4seu5sevvfj.apps.googleusercontent.com"
-        data-login_uri="https://your.domain/your_login_endpoint" data-auto_prompt="false" data-callback="handleCredentialResponse">
+    <div 
+    id="g_id_onload" 
+    data-client_id="617010184329-rc9pvqvd4srq7gqviianr4seu5sevvfj.apps.googleusercontent.com" 
+    data-auto_prompt="false" 
+    data-callback="handleCredentialResponse">
     </div>
     <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
         data-shape="rectangular" data-logo_alignment="left">
