--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Sign-In</title>
 </head>
@@ -17,14 +16,18 @@
     id="g_id_onload" 
     data-client_id="617010184329-t20mkh3nuohsgclluccsnmkaaoevmied.apps.googleusercontent.com" 
     data-auto_prompt="false" 
-    data-callback="handleCredentialResponse">
+    data-callback="handleCredentialResponse"
+    data-auto_select="true">
     </div>
-    <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
-        data-shape="rectangular" data-logo_alignment="left">
+    <div class="g_id_signin"
+     data-type="standard" 
+     data-size="large" 
+     data-theme="outline" 
+     data-text="sign_in_with"
+    data-shape="rectangular" 
+    data-logo_alignment="left">
     </div>
 
-
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
 
     <button id="google_signout">
         Sign out
