--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
     </div>
 
 
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
     <button id="google_signout">
         Sign out
     </button>
